# Light-Monitor-95

./: .gitignore  README.md  db.sql  environment.yml  run_all.sh  setup.sh
arduino_light_sensor/: arduino_light_sensor.ino
flask_app/: app.py  ros2_bridge.py
flask_app/static/css/: win95.css
flask_app/templates/: base.html  boot.html  dashboard.html  dashboard_content.html  desktop.html  login.html  register.html  startup.html
ros2_ws/src/light_monitor/: package.xml  setup.cfg  setup.py
ros2_ws/src/light_monitor/light_monitor/: serial_node.py
